# voice-dictate

./: .gitignore  CHANGELOG.md  LICENSE  README.md  app.py  build.py  config.py  dictate.py  engine.py  pyproject.toml  requirements.txt  tray.py  voice_dictate.spec  widget.py
scripts/: gen_icon.py
voice_dictate/: __init__.py  __main__.py  app.py  config.py  engine.py  hotkey.py  installer.py  startup.py  tray.py  widget.py
