[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "voice-dictate"
version = "1.0.0"
description = "Voice dictation widget for Windows — Polish-friendly, offline Whisper"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "voice-dictate contributors" }]
keywords = ["voice", "dictation", "whisper", "windows", "polish"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "faster-whisper>=1.0.3",
    "sounddevice>=0.4.6",
    "numpy>=1.26",
    "keyboard>=0.13.5",
    "pyperclip>=1.8.2",
    "PySide6>=6.6",
]

[project.scripts]
voice-dictate = "voice_dictate.__main__:main"

[project.gui-scripts]
voice-dictate-gui = "voice_dictate.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["voice_dictate*"]

[tool.setuptools.package-data]
"voice_dictate.resources" = ["*.ico", "*.png"]
